@startuml component_diagram

title TODO Application - Component Diagram

skinparam componentStyle uml2
skinparam defaultFontSize 11
skinparam padding 5

top to bottom direction

package "Presentation Layer" #FFE5E5 {
    component [TodoGUI] as GUI
    component [TodoCLI] as CLI
    component [InteractiveMenu] as Menu
}

package "Service Layer" #DDFFD4 {
    component [TodoService] as Service
    component [TaskManager] as TManager
    component [CommentsService] as CService
    component [ProjectManager] as PManager
    component [ImportExportService] as IService
}

package "Domain Layer" #FFE5CC {
    package "Task Domain" {
        component [TaskRepositoryImpl] as TRepo
    }

    package "Comment Domain" {
        component [CommentRepositoryImpl] as CRepo
    }

    package "Project Domain" {
        component [ProjectRepositoryImpl] as PRepo
    }
}

package "Protocol Layer\n(Abstraction)" #EEEEFF {
    interface "TaskRepository\nProtocol" as TRepoP
    interface "CommentRepository\nProtocol" as CRepoP
    interface "ProjectRepository\nProtocol" as PRepoP
    interface "StorageBackend\nProtocol" as StorageP
}

package "Storage Layer" #FFF3CC {
    component [JsonStorage] as Storage
}

package "Model Layer" #DDEEFF {
    component [Models:\nTask, Project, TaskComment,\nTaskStatus, FilterOptions,\nTaskSummary] as Models
}

database "todo_data.json" as DB

' Presentation layer dependencies
GUI --> Service
CLI --> Service
CLI --> IService
Menu --> Service
Menu --> IService

' Service layer dependencies
Service --> TManager
Service --> CService
Service --> PManager
IService --> TManager
IService --> CService

' Service to Domain dependencies
TManager --> TRepo
CService --> CRepo
PManager --> PRepo

' Domain implements protocols
TRepo --> TRepoP : implements
CRepo --> CRepoP : implements
PRepo --> PRepoP : implements

' Domain uses storage protocol
TRepo --> StorageP
CRepo --> StorageP
PRepo --> StorageP

' Storage implements protocol
Storage --> StorageP : implements

' Storage uses database
Storage --> DB

' Models are used everywhere
TRepo --> Models
CRepo --> Models
PRepo --> Models

@enduml
